# minishell

./: CMakeLists.txt  Makefile  README.md  minishell.h
builtins/: arg_for_cd.c  builtins.c  child_parent.c  create_process.c  find_path.c  ft_cd.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_pwd.c  ft_unset.c  pipes.c  pipes_and_one_cmd.c  print_notification.c  read_and_write_pipeline.c  signals.c
evaluator/: check_lists.c  evaluator.c  expand_env_arg.c  handling_tokens_with_quotes.c  number_of_redirect.c  open_and_close_fd.c  return_token.c  shape_name_fd.c
gnl/: get_next_line.c  get_next_line.h  get_next_line.h.gch  get_next_line_utils.c
headers/: builtins.c  builtins.h  evaluator.h  lexer.h  lexic.h  minishell.h  other.h  parser.h  utils.h
lexer/: lexer.c
lexic/: check_unexpected_token.c  lexic.c  lexic_token.c
libs/libft/: Makefile  ft_lstdelone.c
minishell/: a.out  add_fd.c  append_to_array.c  builtins.c  convert_from_to.c  convert_struct_to_array.c  copy_envp_to_struct.c  create_new_elements.c  del_content.c  error_handling.c  expand_env_arg.c  find_data_in_env.c  find_env_in_structs.c  find_string.c  free_fd.c  free_params_in_struct.c  ft_cd.c  ft_echo.c  ft_exit.c  ft_lstnew_env.c  ft_pwd.c  ft_split.c  handling_tokens_with_quotes.c  init.c  init_fd.c  init_params.c  lexer.c  main.c  meta.c  parser.c  pipe.c  pipes.c  redirection.c  redirects.c  return_token.c  write_str.c
other/: Dockerfile  check_command.c  check_word.c  convert_env_to_array.c  convert_from_to.c  copy_envp_to_struct.c  create_new_elements.c  del_content.c  find_data_in_env.c  find_in_env.c  free_params_in_struct.c  ft_lstadd_back_env.c  ft_lstsize_env.c  ft_split_by.c  ft_strcmp.c  functions.c  getcharacter.c  init.c  lst_delete.c  lst_func.c  main.c  params_del.c  prompt_line.c  sort.c
parser/: append_to_array.c  check_redir.c  check_unexpected_token.c  expand_env_arg.c  handling_tokens_with_quotes.c  number_of_redirect.c  open_and_close_fd.c  open_fd.c  parser.c  return_token.c  shape_name_fd.c
srcs/: builtins.c  check_redir.c  convert_from_to.c  copy_envp_to_struct.c  find_path.c  ft_lstadd_back_env.c  functions.c  getcharacter.c  handling_tokens_with_quotes.c  init.c  main.c  number_of_lines.c  open_and_close_fd.c  open_fd.c  parser.c  pipes.c  redirects.c
utils/: append_to_array.c  check_command.c  check_word.c  convert_from_to.c  copy_envp_to_struct.c  create_new_elements.c  del_content.c  find_in_env.c  free_params_in_struct.c  ft_lstadd_back_env.c  ft_lstsize_env.c  ft_split_by.c  ft_strcmp.c  functions.c  getcharacter.c  init.c  lst_func.c  main.c  params_del.c  prompt_line.c  sort.c
